# learn-nju-ics

./: CMakeLists.txt  Makefile  README.md  main.c
include/: logic.h
python_files/: display.py
src/: led.c  logic.c
